--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TestApp</string>
+    <string name="login_button">Login</string>
+    <string name="dialogTitle">Error</string>
+    <string name="dialogMessage">Invalid User or Password</string>
 </resources>
